# automake-demo

./: Makefile.am  README.md  build_setup.sh  configure.ac
src/: Makefile.am  folder.cpp  folder.h
test/: Makefile.am  main.cpp
